--- a/front-end-app/package.json
+++ b/front-end-app/package.json
@@ -27,6 +27,7 @@
     "@angular-devkit/build-angular": "^15.1.4",
     "@angular/cli": "~15.1.4",
     "@angular/compiler-cli": "^15.1.0",
+    "@angular/language-service": "^15.2.3",
     "@angular/localize": "^15.2.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
